[package]
name = "rust-wii"
version = "0.1.0"
authors = ["rust-wii"]
edition = "2018"

[[bin]]
name = "rust-wii"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
lto = true
incremental = false
codegen-units = 1

[dependencies.libc]
git = "https://github.com/rust-wii/libc.git"
branch = "wii"
default-features = false

[dependencies.mllib-sys]
git = "https://github.com/rust-wii/mllib-sys.git"
