[package]
name = "rust-wii"
version = "0.1.0"
authors = ["rust-wii"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "rust-wii"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
lto = true
incremental = false
codegen-units = 1

[dependencies.ogc-rs]
git = "https://github.com/rust-wii/ogc-rs.git"
