[package]
name = "rust-wii"
version = "0.1.0"
authors = ["rust-wii"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "rust-wii"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"
panic_immediate_abort = true

[dependencies.ogc-rs]
git = "https://github.com/rust-wii/ogc-rs.git"
